Wed Oct 15 13:22:32 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_linux_borland.GNU:
          Also set versioned_so to 0 in this file.

Wed Oct 15 13:16:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_mingw32.GNU:
        * include/makeinclude/platform_cygwin32.GNU:
          Instead of setting SONAME and SOVERSION to empty, set
          versioned_so to 0 to indicate that versioned dll's should
          be used because cygwin and mingw have problem with this.
          This makes Cygwin/MinGW working again.

Wed Oct 15 08:45:20 EDT 2003  Kevin Bryank <bryank@cs.uri.edu>

        * bin/MakeProjectCreator/config/rtcosscheduling.mpb:
          Adding base project for using the RTC 1.0 Scheduling Service

Wed Oct 15 10:40:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Select_Reactor_Base.cpp:
          Fixed unused argument warning when ACE_HAS_REACTOR_NOTIFICATION_QUEUE
          is defined

Tue Oct 14 21:54:07 2003  Nanbor Wang  <nanbor@.cs.wustl.edu>

	* Makefile (CIAO_CORE_DIRS): Added Kokyu to the list of base
	  library for CIAO.  Although CIAO doesn't depend on Kokyu, it is
	  needed to allow the compilation in orbsvcs/orbsvcs/ to run to
	  completion.

Tue Oct 14 23:21:00 UTC 2003  Don Hinton <dhinton@dresystems.com>

        * ace/OS.h:
          Removed following method declarations that were not implemented
          or used: times(), cond_timedwait_i(), alarm_i(), ualarm_i(),
          sleep_i(), nanosleep_i(), select_i(), poll_i(), sema_wait_i(),
          sigtimedwait_i(), gettimeofday_i().

        * ace/Process.h:
          Fixed typo and added #include of Global_Macros.h.

Tue Oct 14 17:13:46 2003  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* ace/Process.h: Put the ACE_Process copy constructor and
	  assignment operator in the private part of the class to disallow
 	  copying.  Thanks to Adam Fanello <yahoo@fanello.net> for